--- a/tab2.html
+++ b/tab2.html
@@ -14,6 +14,7 @@
       <div>
         ...
         <button value="7" id="7">Hey</button>
+        <button value ="9" id= "4">Hola</button>
         <p>
           Hola, Qué tal estas?
         </p>
